Deviation service refactoring